[tool.poetry]
name = "dom-bot"
version = "0.1.0"
description = ""
authors = ["nkondakov <edu@nkondakov.org>"]
readme = "README.md"
packages = [{include = "dom_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.0.0b8"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
